# DateTime

./: .gitignore  .meta.toml  .pre-commit-config.yaml  .travis.yml  CHANGES.rst  CHANGES.txt  MANIFEST.in  README.rst  README.txt  buildout.cfg  buildout4.cfg  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  pre-commit.yml  publish_conda.yml  tests.yml
conda/: meta.yaml
src/DateTime/: DateTime.py  DateTime.txt  DateTimeZone.py  interfaces.py  pytz.txt  pytz_support.py
src/DateTime/tests/: legacy.py  testDateTime.py  test_datetime.py
